--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -19,7 +19,12 @@
 	{block head}
 	{/block}
 </head>
-<body class="mini-navbar">
+<body class="pace-done mini-navbar">
+    <script type="text/javascript">
+        if ($(this).width() < 769) {
+            $('body').removeClass('mini-navbar');
+        }
+    </script>
     <div id="wrapper">
 	    <nav class="navbar-default navbar-static-side" role="navigation">
 	        <div class="sidebar-collapse">
@@ -88,20 +93,8 @@
                 <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
                     <div class="navbar-header">
                         <a class="navbar-minimalize minimalize-styl-2 btn btn-primary" href="#"><i class="fa fa-bars"></i></a>
-                        <form role="search" class="navbar-form-custom" action="http://webapplayers.com/inspinia_admin-v2.3/search_results.html">
-                            <div class="form-group">
-                                <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
-                            </div>
-                        </form>
                     </div>
                     <ul class="nav navbar-top-links navbar-right">
-                        <li><span class="m-r-sm text-muted welcome-message">Welcome to INSPINIA+ Admin Theme.</span></li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                                <i class="fa fa-envelope"></i>
-                                <span class="label label-warning">16</span>
-                            </a>
-                        </li>
                         <li class="main-ajax-spinner">
                             <div class="sk-spinner sk-spinner-circle">
                                 <div class="sk-circle1 sk-circle"></div>
@@ -148,7 +141,17 @@
     <script src="{$basePath}/js/main.js"></script>
 
     {snippet flashes}
+    
     <script>
+    $(window).resize(function() {
+        if ($(this).width() < 769) {
+            $('body').removeClass('mini-navbar');
+        }
+        else {
+            $('body').addClass('mini-navbar');   
+        }
+    });
+
     {foreach $flashes as $flash}
     	toastr.{$flash->type|noescape}({$flash->message});
     {/foreach}
